# causalscreen

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: FUNDING.yml
causalscreen/: __init__.py  local.py  screening.py
examples/: demo.py
tests/: reference_impl_local.py  reference_impl_screening.py  test_optimized.py  test_screening.py
